# telegram-todobot

./: .env.dist  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
app/: commands.py  crud.py  database.py  settings.py  todobot.py  utils.py  views.py
